vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Creating first Vpc with CloudFormation

Resources:
  RCVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/20
      Tags:
        - Key: Name
          Value: RC

  RCPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref RCVPC
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.0.0/24
      Tags:
        - Key: Name
          Value: RCPublicSubnet1      

  RCPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref RCVPC
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: RCPublicSubnet2

  RCPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref RCVPC
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.2.0/24
      Tags:
        - Key: Name
          Value: RCPrivateSubnet1 

  RCPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref RCVPC
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.3.0/24
      Tags:
        - Key: Name
          Value: RCPrivateSubnet2  

  RCPublicNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref RCVPC
  InboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
       NetworkAclId:
         Ref: RCPublicNACL
       RuleNumber: 100
       Protocol: 6
       RuleAction: allow
       CidrBlock: 0.0.0.0/0
       PortRange:
         From: 22
         To: 22
  OutboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
       NetworkAclId:
         Ref: RCPublicNACL
       RuleNumber: 100
       Protocol: -1
       Egress: true
       RuleAction: allow
       CidrBlock: 0.0.0.0/0  

  RCPrivateNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref RCVPC   
  InboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
       NetworkAclId:
         Ref: RCPrivateNACL
       RuleNumber: 100
       Protocol: 6
       RuleAction: allow
       CidrBlock: 10.0.0.0/23
       PortRange:
         From: 22
         To: 22
  OutboundRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
       NetworkAclId:
         Ref: RCPrivateNACL
       RuleNumber: 100
       Protocol: -1
       Egress: true
       RuleAction: allow
       CidrBlock: 0.0.0.0/0          

  RCPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RCVPC
      Tags:
        - Key: Name
          Value: RCPrivateRouteTable

  RCPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref RCVPC
      Tags:
        - Key: Name
          Value: RCPublicRouteTable        

  RCPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RCPublicRouteTable
      SubnetId: !Ref RCPublicSubnet1 

  RCPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RCPublicRouteTable
      SubnetId: !Ref RCPublicSubnet2  

  RCPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RCPrivateRouteTable
      SubnetId: !Ref RCPrivateSubnet1  

  RCPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RCPrivateRouteTable
      SubnetId: !Ref RCPrivateSubnet2   

  RCPublicSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref RCPublicSubnet1
      NetworkAclId: !Ref RCPublicNACL

  RCPublicSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref RCPublicSubnet2
      NetworkAclId: !Ref RCPublicNACL

  RCPrivateSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref RCPrivateSubnet1
      NetworkAclId: !Ref RCPrivateNACL

  RCPrivateSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref RCPrivateSubnet2
      NetworkAclId: !Ref RCPrivateNACL                          

  RCInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: RCInternetGateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref RCInternetGateway
      VpcId: !Ref RCVPC    

  RCRoute:
    Type: AWS::EC2::Route
    Properties:
       RouteTableId:
         Ref: RCPublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: RCInternetGateway    

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref RCPublicSubnet1
            
  RCRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RCPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
